tests/parser/fail/v24_fail_match_expression_case.ep
# COMPILE_FAIL_CONTAINS: Expected match literal case
fun main(): void {
    let pattern = 1
    match 1 {
        pattern: { ret }
        _: { ret }
    }
}
